fix: max room name length < 24 & update room name

--- a/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/zh-Hans.lproj/Localizable.strings
@@ -53,3 +53,13 @@
 "show_statistic_loss_package" = "丢包率";
 "show_statistic_down_net_speech" = "下行网络";
 
+"show_create_room_name1"="小可爱是我呀";
+"show_create_room_name2"="我是你的小可爱";
+"show_create_room_name3"="一往情深";
+"show_create_room_name4"="情不知所起";
+"show_create_room_name5"="沪上挖掘机";
+"show_create_room_name6"="张江推土机";
+"show_create_room_name7"="川沙妲己痴迷粉丝";
+"show_create_room_name8"="疯狂星期几";
+"show_create_room_name9"="小黄鸭";
+"show_create_room_name10"="西二旗老板娘";
