--- a/Android/scenes/showTo1v1/src/main/res/values/strings.xml
+++ b/Android/scenes/showTo1v1/src/main/res/values/strings.xml
@@ -9,4 +9,29 @@
     <string name="show_to1v1_create_room_tips">本产品仅用于功能体验，单次直播时长不超过20mins</string>
     <string name="show_to1v1_create">创建</string>
     <string name="show_to1v1_creating">创建中…</string>
+    <string name="show_to1v1_come_soon">Come back soon</string>
+    <string name="show_to1v1_hangup">结束连线</string>
+    <string name="show_to1v1_call_privately">Call privately</string>
+    <string name="show_to1v1_call_connecting">连接中…</string>
+    <string name="show_to1v1_call_dialog_info">本产品仅用于功能体验，单次直播时长不超过20mins</string>
+    <string name="show_to1v1_dashboard_item">实时数据</string>
+
+    <!--    dashboard-->
+    <string name="show_to1v1_dashboard_bitrate">码率: %s kbps</string>
+    <string name="show_to1v1_dashboard_up_bitrate">发送码率: %s kbps</string>
+    <string name="show_to1v1_dashboard_down_bitrate">接收码率: %s kbps</string>
+    <string name="show_to1v1_dashboard_fps">帧率: %s fps</string>
+    <string name="show_to1v1_dashboard_delay">延迟: %s ms</string>
+    <string name="show_to1v1_dashboard_loss_package">丢包率: %s ％</string>
+    <string name="show_to1v1_dashboard_up_net_speech">上行网络: %s KB/s</string>
+    <string name="show_to1v1_dashboard_down_net_speech">下行网络: %s KB/s</string>
+    <string name="show_to1v1_dashboard_resolution">分辨率: %s</string>
+    <string name="show_to1v1_dashboard_up">发送端</string>
+    <string name="show_to1v1_dashboard_encode_resolution">编码分辨率: %s</string>
+    <string name="show_to1v1_dashboard_encode_fps">编码帧率: %s fps</string>
+    <string name="show_to1v1_dashboard_up_loss_package">上行丢包率: %s ％</string>
+    <string name="show_to1v1_dashboard_down">接收端</string>
+    <string name="show_to1v1_dashboard_receive_resolution">接收分辨率: %s</string>
+    <string name="show_to1v1_dashboard_receive_fps">接收帧率: %s fps</string>
+    <string name="show_to1v1_dashboard_down_loss_package">下行丢包率: %s ％</string>
 </resources>
