--- a/Android/scenes/showTo1v1/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/showTo1v1/src/main/res/values-zh/strings.xml
@@ -18,7 +18,7 @@
     <string name="show_to1v1_call_dialog_info">本产品仅用于功能体验，单次直播时长不超过20mins</string>
     <string name="show_to1v1_dashboard_item">实时数据</string>
     <string name="show_to1v1_ending_tips">对方结束连线</string>
-    <string name="show_to1v1_no_answer">无应答</string>
+    <string name="show_to1v1_no_answer">我很快回来，一会再连线我吧</string>
     <string name="show_to1v1_auto_connected">呼入，已自动接听…</string>
 
     <!--    dashboard-->
