[Android] add grand chorus scene

--- a/Android/app/src/main/res/values-zh/strings.xml
+++ b/Android/app/src/main/res/values-zh/strings.xml
@@ -40,8 +40,10 @@
     <string name="app_interactive_games">互动游戏</string>
     <string name="app_coming_soon">敬请期待</string>
     <string name="app_voice_chat_spatial">空间音频</string>
+    <string name="app_grand_chorus">大合唱</string>
 
     <string name="app_voice_chat_spatialTip">—空间音频模式</string>
+    <string name="app_grand_chorus_tip">支持128人大合唱</string>
 
 
     <string name="app_about_app">关于声动互娱</string>
