--- a/Android/app/src/main/res/values-zh/strings.xml
+++ b/Android/app/src/main/res/values-zh/strings.xml
@@ -45,7 +45,7 @@
 
 
     <string name="app_about_app">关于声动互娱</string>
-    <string name="app_about_name">声动互娱</string>
+    <string name="app_about_name">声动互娱-秀场体验版</string>
     <string name="app_about_version">版本号</string>
     <string name="app_about_scene_version">场景版本号</string>
     <string name="app_about_chat_room">语聊房</string>
