--- a/Android/scenes/show/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/show/src/main/res/values-zh/strings.xml
@@ -250,6 +250,7 @@
     <string name="show_video_quailty_clear">高清优先</string>
     <string name="show_video_quailty_tips">针对不同目标观众端的画质适配策略</string>
     <string name="show_audience_sr_tips">低端机不建议打开，后台已默认关闭超分</string>
+    <string name="show_broadcaster_bad_exit">检测到上次直播异常退出，请重新创建直播间开播</string>
 
     <string-array name="show_encoder">
         <item>硬编码</item>
