--- a/Android/scenes/pure1v1/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/pure1v1/src/main/res/values-zh/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="pure1v1_room_list_title">1V1私密房</string>
     <string name="pure1v1_room_list_refresh">用户列表已刷新</string>
+    <string name="pure1v1_room_list_local_offline">本地用户已掉线请重试</string>
     <string name="pure1v1_room_list_empty_title">等待其它用户入场</string>
     <string name="pure1v1_room_list_empty_content">欢迎来到声网1V1私密房，目前暂无其它用户入场，你可邀约朋友入场体验。</string>
     <string name="pure1v1_call_receive_invitation">邀请你私密视频连线</string>
