--- a/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
@@ -34,6 +34,7 @@
 "setting_statistic" = "实时数据";
 "call_user_busy_tips"="我很快回来，一会再连线我把";
 "call_content_inspect_warning"="监测到当前内容存在违规行为";
+"call_connected_toast_tips"="呼入，已自动接听...";
 
 
 "show_statistic_bitrate" = "码率";
