--- a/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/zh-Hans.lproj/Localizable.strings
@@ -36,6 +36,8 @@
 "call_user_busy_tips"="我很快回来，一会再连线我把";
 "call_content_inspect_warning"="监测到当前内容存在违规行为";
 "call_connected_toast_tips"="呼入，已自动接听...";
+"user_list_cell_local_user"="本人信息";
+"user_list_cell_remote_user"="对端信息";
 
 
 "show_statistic_bitrate" = "码率";
