--- a/Android/scenes/showTo1v1/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/showTo1v1/src/main/res/values-zh/strings.xml
@@ -22,6 +22,8 @@
     <string name="show_to1v1_no_answer">我很快回来，一会再连线我吧</string>
     <string name="show_to1v1_auto_connected">呼入，已自动接听…</string>
     <string name="show_to1v1_come_soon1">Hi，我暂时有事，很快回来…</string>
+    <string name="show_to1v1_current_title">本人信息</string>
+    <string name="show_to1v1_linking_title">对端信息</string>
 
     <!--    dashboard-->
     <string name="show_to1v1_dashboard_bitrate">码率: %s kbps</string>
