--- a/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
@@ -42,6 +42,7 @@
 
 "app_voice_chat"="语聊房";
 "app_show_live"="秀场直播";
+"app_cantata"="大合唱";
 "app_meta_live"="元直播";
 "app_meta_chatting"="元语聊";
 "app_interactive_games"="互动游戏";
