--- a/Android/scenes/ktv/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv/src/main/res/values/strings.xml
@@ -60,11 +60,11 @@
     <string name="ktv_leave_title">关闭歌房</string>
     <string name="ktv_leave_msg">关闭歌房后所有成员将被移除房间</string>
     <string name="ktv_music_menu_dialog_title">控制台</string>
-    <string name="ktv_music_menu_dialog_ear">耳返</string>
+    <string name="ktv_music_menu_dialog_ear">耳返设置</string>
     <string name="ktv_music_menu_dialog_tone">升降调</string>
     <string name="ktv_music_menu_dialog_remote_volume">远端音量</string>
-    <string name="ktv_music_menu_dialog_vol1">音量</string>
-    <string name="ktv_music_menu_dialog_vol2">伴奏</string>
+    <string name="ktv_music_menu_dialog_vol1">人声音量</string>
+    <string name="ktv_music_menu_dialog_vol2">伴奏音量</string>
     <string name="ktv_music_menu_dialog_effect">效果</string>
     <string name="ktv_song_rank_1">热歌榜</string>
     <string name="ktv_song_rank_2">嗨唱推荐</string>
@@ -114,6 +114,14 @@
     <string name="ktv_voice_effect">音效</string>
     <string name="ktv_camera">摄像头</string>
     <string name="ktv_leave_chorus">退出合唱</string>
+    <string name="ktv_voice_highlight">突出人声</string>
+    <string name="ktv_voice_profile">配置</string>
+    <string name="ktv_voice_professional">专业主播</string>
+    <string name="ktv_voice_quality">音质</string>
+    <string name="ktv_voice_AINS">降低背景噪音</string>
+    <string name="ktv_low_latency">低延迟模式</string>
+    <string name="ktv_AIAEC_switcher">AIAEC 开关（beta）</string>
+    <string name="ktv_AIAEC_strength">AIAEC 强度选择（beta）</string>
 
     <!--    Content Description-->
     <string name="ktv_toggle_mic">麦克风启用或静音</string>
