--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -28,26 +28,22 @@
     <string name="app_v_code">验证码</string>
 
     <string name="app_plus_86">+86</string>
-    <string name="app_logout">退出登录</string>
-    <string name="app_logoff_account">注销账号</string>
-    <string name="app_debug_mode">开发者模式</string>
-    <string name="app_logoff">注销</string>
-
-    <string name="app_voice_chat">语聊房</string>
-    <string name="app_show_live">秀场直播</string>
-    <string name="app_meta_live">元直播</string>
-    <string name="app_meta_chatting">元语聊</string>
-    <string name="app_interactive_games">互动游戏</string>
-    <string name="app_coming_soon">敬请期待</string>
-    <string name="app_voice_chat_spatial">空间音频</string>
-
-    <string name="app_voice_chat_spatialTip">—空间音频模式</string>
-
-
-    <string name="app_about_app">About us</string>
+    <string name="app_logout">sign out</string>
+    <string name="app_logoff_account">Cancelling an account</string>
+    <string name="app_logoff">deregister</string>
+    <string name="app_debug_mode">Developer mode</string>
+    <string name="app_voice_chat">Chat Room</string>
+    <string name="app_show_live">Live broadcast of the show</string>
+    <string name="app_meta_live">Meta Live</string>
+    <string name="app_meta_chatting">Yuanyu chat</string>
+    <string name="app_interactive_games">interactive game</string>
+    <string name="app_coming_soon">Stay tuned</string>
+    <string name="app_voice_chat_spatial">Spatial Audio</string>
+    <string name="app_voice_chat_spatialTip">— Spatial Audio mode</string>
+    <string name="app_about_app">About Agora Social Entertainment</string>
     <string name="app_about_name">Agora Social Entertainment</string>
-    <string name="app_about_version">Version</string>
-    <string name="app_about_scene_version">Scene Version</string>
+    <string name="app_about_version">version number</string>
+    <string name="app_about_scene_version">Scene version number</string>
     <string name="app_about_chat_room">Chat Room</string>
     <string name="app_about_chat_room_spatial">Chat Room SA Mode</string>
     <string name="app_about_karaoke">Karaoke</string>
