--- a/Android/scenes/voice_spatial/src/main/res/values/strings.xml
+++ b/Android/scenes/voice_spatial/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <resources>
     <string name="voice_app_name">Agora Chat Room</string>
     <string name="voice_app_agora_chatroom">Agora Chat Room</string>
@@ -169,7 +168,9 @@
     <string name="voice_chatroom_gaming_buddy_introduce">This sound effect focuses on solving all kinds of problems in the game scene where the anchor plays with him, including the collaborative reverberation processing of voice and game sound, the melody of sound and the beautification of sound lines. It can make the voice of the accompanying anchor more attractive and ensure the scene feeling of the game voice.</string>
     <string name="voice_chatroom_professional_broadcaster">Professional podcaster</string>
     <string name="voice_chatroom_professional_broadcaster_introduce">This sound effect focuses on solving the problems of poor sound quality of mono anchors and compatibility with mainstream external sound cards. The Agora stereo collection and high sound quality technology can greatly improve the sound quality of anchors using sound cards and enhance the attraction of live broadcasting rooms. At present, it has been adapted to mainstream sound cards in the market.</string>
-    <string name="voice_chatroom_sound_selection_more">Need more Agora Sound Selection or custom sound. Visit &lt;font color=\'#3C4267\'&gt;&lt;strong&gt;&lt;u&gt;www.agora.io.&lt;/u&gt;&lt;/strong&gt;&lt;/font&gt;<![CDATA[]]></string>
+    <string name="voice_chatroom_sound_selection_more">Need more Agora Sound Selection or custom sound. Visit &lt;font color=\'#3C4267\'&gt;&lt;strong&gt;&lt;u&gt;www.agora.io.&lt;/u&gt;&lt;/strong&gt;&lt;/font&gt;
+        <![CDATA[]]>
+    </string>
     <string name="voice_chatroom_ains_settings">AINS Settings</string>
     <string name="voice_chatroom_your_ains">Your AINS</string>
     <string name="voice_chatroom_agora_blue_bot_ains">Agora Blue Bot AINS</string>
@@ -231,7 +232,4 @@
     <string name="voice_room_content_prohibited">Content prohibited</string>
     <string name="voice_room_send_tip">Send</string>
     <string name="voice_room_name_rule">Incorrect room name</string>
-    <string name="voice_chatroom_permission_setting">Setting</string>
-    <string name="voice_chatroom_permission_leak_title">no microphone permission</string>
-    <string name="voice_chatroom_permission_leak_content">Please turn on the microphone permission in the settings</string>
 </resources>
