[FIX] about us page private 1v1 name

--- a/Android/app/src/main/res/values-zh/strings.xml
+++ b/Android/app/src/main/res/values-zh/strings.xml
@@ -46,7 +46,7 @@
     <string name="app_about_karaoke">在线K歌</string>
     <string name="app_about_show">秀场直播</string>
     <string name="app_about_singbattle">嗨歌抢唱</string>
-    <string name="app_about_pure1v1">声动互娱-1v1私密房</string>
+    <string name="app_about_pure1v1">1v1私密房</string>
     <string name="app_about_customer_service">联系客服</string>
     <string name="app_about_official_website">官网地址</string>
     <string name="app_about_phone_cancel">取消</string>
