--- a/Android/scenes/voice/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/voice/src/main/res/values-zh/strings.xml
@@ -152,6 +152,7 @@
     <string name="voice_chatroom_aiaec">AI回声消除</string>
     <string name="voice_chatroom_aiagc">人声自动增益</string>
     <string name="voice_chatroom_ear_back">耳返</string>
+    <string name="voice_chatroom_sound_card">虚拟声卡</string>
     <string name="voice_chatroom_bgm">背景音乐</string>
     <string name="voice_chatroom_aiaec_audition">AIAEC试听</string>
     <string name="voice_chatroom_aiagc_audition">AGC试听</string>
