--- a/Android/app/src/main/res/values-zh/strings.xml
+++ b/Android/app/src/main/res/values-zh/strings.xml
@@ -9,6 +9,13 @@
     <string name="app_agreement_protection_tip5">提示您注意：当您点击“同意”时，视为您已阅读并愿意接受《用户协议》和《隐私政策》的所有内容。当您点击“不同意”时，将无法体验声动互娱的完整功能。</string>
     <string name="app_agreement_protection_notice">选择“同意”，体验声动互娱完整功能</string>
     <string name="app_agreement_protection_alert">同意 用户协议 及 隐私政策 后，声动互娱才能为您提供协作服务。</string>
+    <string name="app_agreement_the_user_agreement_and_privacy_policy">请同意用户协议和隐私政策</string>
+    <string name="app_guide_chatroom">声动语聊</string>
+    <string name="app_guide_chatroom_introduce">搭载声网最佳音效实践、最新音频技术的语聊房 带来更沉浸、更易用、更有趣的语聊体验</string>
+    <string name="app_guide_ktv">在线K歌房</string>
+    <string name="app_guide_ktv_introduce">一站式接入 20W+ 正版 K 歌热门曲库，灵活接入各类娱乐社交场景，激活多样 K 歌互动玩法</string>
+    <string name="app_guide_live">直播超级画质</string>
+    <string name="app_guide_live_introduce">视频『高清』升级，人更美、物更真，体验更流畅，为直播变现增添更多 buff</string>
 
     <string name="app_login_phone_login">手机号登录</string>
     <string name="app_login_i_agree">我已阅读并同意</string>
@@ -19,6 +26,11 @@
     <string name="app_login_phone_input_info">若手机号未注册，登录后会自动注册。</string>
     <string name="app_login_phone_input_input">请输入手机号</string>
     <string name="app_login_phone_input_next">获取验证码</string>
+    <string name="app_login_phone_input_code">输入验证码</string>
+    <string name="app_login_phone_input_code_info">已发送验证码至 +%1s %2s</string>
+    <string name="app_login_code_wrong_tip">验证码输入错误</string>
+    <string name="app_login_regain_code">重新获取验证码</string>
+    <string name="app_login_count_down">%d s</string>
 
     <string name="app_title_home">首页</string>
     <string name="app_title_find">发现</string>
@@ -78,11 +90,13 @@
     <string name="app_exit_debug">确定退出Debug模式么？</string>
     <string name="app_exit_debug_tip">退出debug模式后，设置页面将恢复成正常的设置页面哦～</string>
     <string name="app_agree_tip">请同意我们的隐私政策与用户协议</string>
-    <string name="app_input_phonenum_tip">请输入正确手机号</string>
+    <string name="app_input_phonenum_tip">请输入正确的手机号</string>
     <string name="app_input_vcode_tip">请输入验证码</string>
     <string name="app_vcode_wrong_tip">验证码错误</string>
     <string name="app_login_success_tip">登陆成功</string>
+    <string name="app_login_failed_tip">登陆失败</string>
     <string name="app_vcode_send_success_tip">验证码发送成功</string>
+    <string name="app_vcode_send_failed_tip">验证码发送失败</string>
     <string name="app_edit_success">修改成功</string>
 
 </resources>
