--- a/Android/scenes/ktv/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv/src/main/res/values/strings.xml
@@ -163,4 +163,32 @@
     <string name="ktv_retry">点击重试</string>
     <string name="ktv_join_chorus_failed">加入合唱失败</string>
 
+    <string name="ktv_virtual_sound_card">虚拟声卡</string>
+    <string name="ktv_input_device">麦克风类型</string>
+    <string name="ktv_sound_card_mic_type">麦克风类型%d</string>
+    <string name="ktv_external_mircrophone">default 外置麦克风</string>
+    <string name="ktv_sound_card_switch">虚拟声卡开关</string>
+    <string name="ktv_sound_card_error">当前无法使用虚拟声卡，请链接有线输入设备</string>
+    <string name="ktv_sound_card_supports">目前支持以下设备： \n1.有线耳机 \n2.有线麦克风</string>
+    <string name="ktv_virtual_sound_card_switch">虚拟声卡开关</string>
+    <string name="ktv_preset_sound">预设音效</string>
+    <string name="ktv_preset_sound_dashu">大叔音</string>
+    <string name="ktv_preset_sound_dashu_tips">男声唱歌1：高混响|KTV</string>
+    <string name="ktv_preset_sound_mum">妈音</string>
+    <string name="ktv_preset_sound_mum_tips">女声唱歌1：高混响|KTV</string>
+    <string name="ktv_preset_sound_qingshu">青叔音</string>
+    <string name="ktv_preset_sound_qingshu_tips">男声唱歌2：明亮 | 磁性</string>
+    <string name="ktv_preset_sound_yuma">御妈音</string>
+    <string name="ktv_preset_sound_yuma_tips">女声唱歌2：明亮 |磁性</string>
+    <string name="ktv_preset_sound_qingnian">青年音</string>
+    <string name="ktv_preset_sound_qingnian_tips">男声唱歌3：低沉 | 温暖</string>
+    <string name="ktv_preset_sound_shaoyu">少御音</string>
+    <string name="ktv_preset_sound_shaoyu_tips">女声唱歌3：醇厚 | 饱满</string>
+    <string name="ktv_gain_adjust">增益调节</string>
+    <string name="ktv_gain_adjust_tips">调节声音信号的增益倍数</string>
+    <string name="ktv_sound_mic_phone_type">麦克风类型</string>
+    <string name="ktv_sound_mic_phone_type_tips">选择麦克风的预设参数</string>
+    <string name="ktv_sound_preset_type">预设音效</string>
+    <string name="ktv_sound_preset_off">关闭</string>
+
 </resources>
